--- a/doc/02_refinement.ipynb
+++ b/doc/02_refinement.ipynb
@@ -39,12 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "46c6d8d2-d232-4698-bb42-ce9b9986ed2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fandango.language.parse import parse_file, Grammar\n",
+    "from fandangoLearner.interface.fandango import parse_file\n",
+    "\n",
+    "from fandango.language.parse import Grammar\n",
     "from fandangoLearner.data.input import FandangoInput\n",
     "\n",
     "grammar_file = \"calculator.fan\"\n",
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "bf83d33301e091ad",
    "metadata": {
     "ExecuteTime": {
@@ -93,16 +95,23 @@
      "output_type": "stream",
      "text": [
       "fandango-learner:INFO: Instantiated patterns: 21\n",
-      "fandango-learner:INFO: Found 243 valid conjunctions\n",
+      "fandango-learner:INFO: Filtered positive inputs for learning: 2\n",
+      "fandango-learner:INFO: Found 6 valid conjunctions\n",
       "fandango-learner:INFO: Found 0 valid disjunctions\n"
      ]
     }
    ],
    "source": [
     "from fandangoLearner.learner import FandangoLearner\n",
+    "from fandangoLearner.learner import NonTerminal\n",
+    "relevant_non_terminals = {\n",
+    "    NonTerminal(\"<number>\"),\n",
+    "    NonTerminal(\"<maybeminus>\"),\n",
+    "    NonTerminal(\"<function>\"),\n",
+    "}\n",
     "\n",
     "learner = FandangoLearner(grammar)\n",
-    "learned_constraints = learner.learn_constraints(initial_inputs)"
+    "learned_constraints = learner.learn_constraints(initial_inputs, relevant_non_terminals)"
    ]
   },
   {
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "c06458df1b5a5f80",
    "metadata": {
     "ExecuteTime": {
@@ -128,26 +137,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(int(<number>) <= -10.0 and int(<onenine>) < len(str(<start>)))\n",
-      "(int(<number>) <= -10.0 and int(<onenine>) < len(str(<arithexp>)))\n",
-      "(int(<number>) <= -10.0 and int(<onenine>) != len(str(<start>)))\n",
-      "(int(<number>) <= -10.0 and int(<onenine>) != len(str(<arithexp>)))\n",
-      "(int(<number>) <= -10.0 and str(<function>) == 'sqrt')\n",
-      "((exists <container> in <digit>: str(<container>) != 0.0) and str(<function>) == 'sqrt')\n",
-      "((exists <container> in <digit>: str(<container>) != 0.0) and str(<function>) == 'sqrt')\n",
-      "(int(<onenine>) < len(str(<start>)) and (exists <container> in <number>: int(<container>) <= -10.0))\n",
-      "(int(<onenine>) < len(str(<arithexp>)) and (exists <container> in <number>: int(<container>) <= -10.0))\n",
-      "(int(<onenine>) != len(str(<start>)) and (exists <container> in <number>: int(<container>) <= -10.0))\n",
-      "(int(<onenine>) != len(str(<arithexp>)) and (exists <container> in <number>: int(<container>) <= -10.0))\n",
-      "(str(<function>) == 'sqrt' and (exists <container> in <number>: int(<container>) <= -10.0))\n",
-      "(str(<function>) == 'sqrt' and (exists <container> in <digit>: int(<container>) <= 0.0))\n",
-      "(str(<function>) == 'sqrt' and (exists <container> in <digit>: int(<container>) <= 0.0))\n"
+      "(int(<number>) <= -10 and str(<function>) == 'sqrt'), Precision: 1.0, Recall: 1.0 (based on 2 failing and 4 passing inputs)\n"
      ]
     }
    ],
    "source": [
     "for candidate in learner.get_best_candidates():\n",
-    "    print(candidate.constraint)"
+    "    print(candidate)"
    ]
   },
   {
@@ -168,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "86c755aa0e2c31f3",
    "metadata": {
     "ExecuteTime": {
@@ -202,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "525cce8be90711c6",
    "metadata": {
     "ExecuteTime": {
@@ -236,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "c01df9e9e8035a82",
    "metadata": {
     "ExecuteTime": {
@@ -249,39 +245,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sin(-900)\n",
-      "sqrt(-285)\n",
-      "cos(-400034)\n",
-      "sqrt(-115000)\n",
-      "sin(-1000)\n",
-      "sqrt(8000)\n",
-      "cos(-647)\n",
       "sqrt(2)\n",
-      "sqrt(-408000)\n",
-      "sqrt(510634)\n",
-      "tan(-200)\n",
-      "sqrt(50075)\n",
-      "tan(-108393)\n",
-      "cos(-25750)\n",
-      "sqrt(-10303)\n",
       "sqrt(-900)\n",
-      "tan(-630800)\n",
-      "sqrt(-90)\n",
-      "sqrt(-2008)\n",
-      "sin(-800)\n",
-      "sqrt(-403870)\n",
-      "tan(-866369)\n",
       "cos(10)\n",
-      "sqrt(-10)\n",
-      "sqrt(-71)\n",
-      "sqrt(-43010)\n",
-      "sin(-823210)\n",
-      "cos(-100)\n",
-      "sqrt(-35032)\n",
+      "sqrt(-953)\n",
+      "sin(-900)\n",
       "sqrt(0)\n",
-      "sqrt(-7801)\n",
-      "cos(-50060)\n",
-      "sqrt(60)\n"
+      "sqrt(-10)\n",
+      "sqrt(-7710)\n"
      ]
     }
    ],
@@ -300,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "d4a61f20c0d4a182",
    "metadata": {
     "ExecuteTime": {
@@ -314,7 +285,8 @@
      "output_type": "stream",
      "text": [
       "fandango-learner:INFO: Instantiated patterns: 21\n",
-      "fandango-learner:INFO: Found 10 valid conjunctions\n",
+      "fandango-learner:INFO: Filtered positive inputs for learning: 4\n",
+      "fandango-learner:INFO: Found 6 valid conjunctions\n",
       "fandango-learner:INFO: Found 0 valid disjunctions\n"
      ]
     },
@@ -322,8 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(int(<number>) <= -10.0 and str(<function>) == 'sqrt')\n",
-      "(str(<function>) == 'sqrt' and (exists <container> in <number>: int(<container>) <= -10.0))\n"
+      "(int(<number>) <= -10 and str(<function>) == 'sqrt')\n"
      ]
     }
    ],
@@ -369,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "368e3121ab11269f",
    "metadata": {
     "ExecuteTime": {
@@ -429,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "ab7083197e8c0e6",
    "metadata": {
     "ExecuteTime": {
@@ -446,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "id": "cf76e66e016880f0",
    "metadata": {
     "ExecuteTime": {
@@ -458,10 +429,10 @@
     {
      "data": {
       "text/plain": [
-       "(str(<function>) == 'sqrt' and ~(int(<number>) <= -10.0))"
+       "(str(<function>) == 'sqrt' and ~(int(<number>) <= -10))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "id": "129923a2450978fb",
    "metadata": {
     "ExecuteTime": {
@@ -488,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "id": "b90690c2b3f379b3",
    "metadata": {
     "ExecuteTime": {
@@ -501,13 +472,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sqrt(-6)\n",
-      "sqrt(-5)\n",
-      "sqrt(-8)\n",
-      "sqrt(-1)\n",
-      "sqrt(-7)\n",
+      "sqrt(-2)\n",
       "sqrt(-3)\n",
-      "sqrt(-4)\n"
+      "sqrt(-8)\n"
      ]
     }
    ],
@@ -521,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "b28d689e660d166a",
    "metadata": {
     "ExecuteTime": {
@@ -535,16 +502,16 @@
      "output_type": "stream",
      "text": [
       "fandango-learner:INFO: Instantiated patterns: 21\n",
-      "fandango-learner:INFO: Found 30 valid conjunctions\n",
-      "fandango-learner:INFO: Found 2 valid disjunctions\n"
+      "fandango-learner:INFO: Filtered positive inputs for learning: 5\n",
+      "fandango-learner:INFO: Found 6 valid conjunctions\n",
+      "fandango-learner:INFO: Found 0 valid disjunctions\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(int(<number>) <= -1.0 and str(<function>) == 'sqrt')\n",
-      "(str(<function>) == 'sqrt' and (exists <container> in <number>: int(<container>) <= -1.0))\n"
+      "(int(<number>) <= -2 and str(<function>) == 'sqrt')\n"
      ]
     }
    ],
@@ -619,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
