update notebooks; added automatic refinement to notebooks

--- a/doc/01_fandango-learner.ipynb
+++ b/doc/01_fandango-learner.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "e59679fef6dfc19",
    "metadata": {
     "ExecuteTime": {
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "from fandangoLearner.interface.fandango import parse\n",
+    "from fandangoLearner.interface.fandango import parse_contents\n",
     "\n",
     "grammar = \"\"\"\n",
     "<start> ::= <arithexp>;\n",
@@ -51,7 +51,7 @@
     "<digit>::=  \"0\" | <onenine>;\n",
     "\"\"\"\n",
     "\n",
-    "grammar, _ = parse(grammar)"
+    "grammar, _ = parse_contents(grammar)"
    ]
   },
   {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "8f28dd8190730334",
    "metadata": {
     "ExecuteTime": {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "c2c465ce2d0721ff",
    "metadata": {
     "ExecuteTime": {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "2b754f60dc3f50f4",
    "metadata": {
     "ExecuteTime": {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "3243e2cd97506639",
    "metadata": {
     "ExecuteTime": {
@@ -172,10 +172,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fandango-learner:INFO: Instantiated patterns: 21\n",
+      "fandango-learner:INFO: Instantiated patterns: 18\n",
       "fandango-learner:INFO: Filtered positive inputs for learning: 2\n",
-      "fandango-learner:INFO: Found 6 valid conjunctions\n",
-      "fandango-learner:INFO: Found 0 valid disjunctions\n"
+      "fandango-learner:INFO: Found 12 valid conjunctions\n"
      ]
     }
    ],
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "239640a7ada55ae1",
    "metadata": {
     "ExecuteTime": {
@@ -215,13 +214,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(str(<function>) == 'sqrt' and int(<number>) <= -10), Precision: 1.0, Recall: 1.0 (based on 2 failing and 4 passing inputs)\n"
+      "(int(<number>) <= -10 and str(<function>) == 'sqrt')\n"
      ]
     }
    ],
    "source": [
-    "for constraint in learner.get_best_candidates():\n",
-    "    print(constraint)"
+    "for candidate in learner.get_best_candidates():\n",
+    "    print(candidate.constraint)"
    ]
   },
   {
@@ -260,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
