--- a/doc/02_refinement.ipynb
+++ b/doc/02_refinement.ipynb
@@ -30,6 +30,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f8d8f886-c410-473d-be3b-62621453c20f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "random.seed(3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "32035fbe-a17e-4ff0-9d3b-4e6acdd88049",
    "metadata": {},
@@ -39,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "46c6d8d2-d232-4698-bb42-ce9b9986ed2b",
    "metadata": {},
    "outputs": [],
@@ -81,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bf83d33301e091ad",
    "metadata": {
     "ExecuteTime": {
@@ -94,10 +105,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fandango-learner:INFO: Instantiated patterns: 21\n",
+      "fandango-learner:INFO: Instantiated patterns: 18\n",
       "fandango-learner:INFO: Filtered positive inputs for learning: 2\n",
-      "fandango-learner:INFO: Found 6 valid conjunctions\n",
-      "fandango-learner:INFO: Found 0 valid disjunctions\n"
+      "fandango-learner:INFO: Found 12 valid conjunctions\n"
      ]
     }
    ],
@@ -124,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c06458df1b5a5f80",
    "metadata": {
     "ExecuteTime": {
@@ -164,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "86c755aa0e2c31f3",
    "metadata": {
     "ExecuteTime": {
@@ -198,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "525cce8be90711c6",
    "metadata": {
     "ExecuteTime": {
@@ -206,14 +216,23 @@
      "start_time": "2024-12-13T09:59:04.610150Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(int(<number>) <= -10 and str(<function>) == 'sqrt'), Precision: 1.0, Recall: 1.0 (based on 2 failing and 4 passing inputs)\n"
+     ]
+    }
+   ],
    "source": [
     "from fandango.evolution.algorithm import Fandango\n",
     "from fandango.language.tree import DerivationTree\n",
     "\n",
     "more_inputs = set(initial_inputs)\n",
     "for candidate in learner.get_best_candidates():\n",
-    "    fandango = Fandango(grammar, [candidate.constraint], desired_solutions=2)\n",
+    "    print(candidate)\n",
+    "    fandango = Fandango(grammar, [candidate.constraint], desired_solutions=10)\n",
     "    solutions = fandango.evolve()\n",
     "    for tree in solutions:\n",
     "        more_inputs.add(FandangoInput(tree, calculator_oracle(str(tree))))\n",
@@ -232,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c01df9e9e8035a82",
    "metadata": {
     "ExecuteTime": {
@@ -245,20 +264,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sqrt(2)\n",
-      "sqrt(-900)\n",
-      "cos(10)\n",
-      "sqrt(-953)\n",
-      "sin(-900)\n",
-      "sqrt(0)\n",
-      "sqrt(-10)\n",
-      "sqrt(-7710)\n"
+      "sqrt(-1990) True\n",
+      "sqrt(-252000) True\n",
+      "sqrt(-900) True\n",
+      "sqrt(-70) True\n",
+      "sin(-900) False\n",
+      "sqrt(-191) True\n",
+      "sqrt(2) False\n",
+      "sqrt(-85792) True\n",
+      "sqrt(-31000) True\n",
+      "sqrt(-10) True\n",
+      "sqrt(0) False\n",
+      "sqrt(-304) True\n",
+      "sqrt(-203400) True\n",
+      "sqrt(-33) True\n",
+      "cos(10) False\n"
      ]
     }
    ],
    "source": [
     "for inp in more_inputs:\n",
-    "    print(inp.tree)"
+    "    print(inp.tree, candidate.constraint.check(inp))"
    ]
   },
   {
@@ -271,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d4a61f20c0d4a182",
    "metadata": {
     "ExecuteTime": {
@@ -284,10 +310,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fandango-learner:INFO: Instantiated patterns: 21\n",
-      "fandango-learner:INFO: Filtered positive inputs for learning: 4\n",
-      "fandango-learner:INFO: Found 6 valid conjunctions\n",
-      "fandango-learner:INFO: Found 0 valid disjunctions\n"
+      "fandango-learner:INFO: Instantiated patterns: 18\n",
+      "fandango-learner:INFO: Filtered positive inputs for learning: 5\n",
+      "fandango-learner:INFO: Found 25 valid conjunctions\n"
      ]
     },
     {
@@ -340,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "368e3121ab11269f",
    "metadata": {
     "ExecuteTime": {
@@ -400,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ab7083197e8c0e6",
    "metadata": {
     "ExecuteTime": {
@@ -412,12 +437,12 @@
    "source": [
     "from fandango.constraints.base import ConjunctionConstraint\n",
     "negated_constraint = NegationConstraint(learned_constraints[0].constraint.constraints[0])\n",
-    "test_constraint = ConjunctionConstraint([learned_constraints[0].constraint.constraints[1], negated_constraint])"
+    "test_constraint = ConjunctionConstraint([negated_constraint, learned_constraints[0].constraint.constraints[1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "cf76e66e016880f0",
    "metadata": {
     "ExecuteTime": {
@@ -429,10 +454,10 @@
     {
      "data": {
       "text/plain": [
-       "(str(<function>) == 'sqrt' and ~(int(<number>) <= -10))"
+       "(~(int(<number>) <= -10) and str(<function>) == 'sqrt')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "129923a2450978fb",
    "metadata": {
     "ExecuteTime": {
@@ -459,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "b90690c2b3f379b3",
    "metadata": {
     "ExecuteTime": {
@@ -472,9 +497,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sqrt(-2)\n",
+      "sqrt(-4)\n",
+      "sqrt(-7)\n",
       "sqrt(-3)\n",
-      "sqrt(-8)\n"
+      "sqrt(-6)\n",
+      "sqrt(-9)\n"
      ]
     }
    ],
@@ -488,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b28d689e660d166a",
    "metadata": {
     "ExecuteTime": {
@@ -501,17 +528,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fandango-learner:INFO: Instantiated patterns: 21\n",
+      "fandango-learner:INFO: Instantiated patterns: 18\n",
       "fandango-learner:INFO: Filtered positive inputs for learning: 5\n",
-      "fandango-learner:INFO: Found 6 valid conjunctions\n",
-      "fandango-learner:INFO: Found 0 valid disjunctions\n"
+      "fandango-learner:INFO: Found 25 valid conjunctions\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(int(<number>) <= -2 and str(<function>) == 'sqrt')\n"
+      "(int(<number>) <= -3 and str(<function>) == 'sqrt')\n"
      ]
     }
    ],
@@ -550,24 +576,64 @@
    "id": "c49e54e6-55e0-4020-923e-0311867f56b8",
    "metadata": {},
    "source": [
-    "## Integration with Avicenna"
+    "## Automatically Refining Fandango Constraints"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "67bda611-2917-4367-8c8a-46aab2a33dfe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "random.seed(3)\n",
+    "from fandangoLearner.refinement.core import FandangoRefinement,LoggerLevel"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "56c35601-ceec-4e21-9867-088a9f6dc48a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fandangoRE = FandangoRefinement(\n",
+    "    grammar,\n",
+    "    calculator_oracle,\n",
+    "    [str(inp) for inp in initial_inputs],\n",
+    "    relevant_non_terminals=relevant_non_terminals,\n",
+    "    logger_level=LoggerLevel.CRITICAL\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9e93e442-35e7-464f-b487-cc2d32aa4aaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candidates = fandangoRE.explain()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "502e25a0-2ca1-47ac-b99a-7beabde1deb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(int(<number>) <= -1 and str(<function>) == 'sqrt')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for candidate in candidates:\n",
+    "    print(candidate.constraint)"
+   ]
   }
  ],
  "metadata": {
@@ -586,7 +652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
