added section to refinement notebook

--- a/doc/02_refinement.ipynb
+++ b/doc/02_refinement.ipynb
@@ -264,21 +264,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sqrt(-1990) True\n",
-      "sqrt(-252000) True\n",
       "sqrt(-900) True\n",
-      "sqrt(-70) True\n",
-      "sin(-900) False\n",
-      "sqrt(-191) True\n",
-      "sqrt(2) False\n",
-      "sqrt(-85792) True\n",
-      "sqrt(-31000) True\n",
       "sqrt(-10) True\n",
+      "cos(10) False\n",
       "sqrt(0) False\n",
-      "sqrt(-304) True\n",
-      "sqrt(-203400) True\n",
+      "sqrt(-1990) True\n",
+      "sin(-900) False\n",
+      "sqrt(-70) True\n",
+      "sqrt(-85792) True\n",
       "sqrt(-33) True\n",
-      "cos(10) False\n"
+      "sqrt(-203400) True\n",
+      "sqrt(-31000) True\n",
+      "sqrt(2) False\n",
+      "sqrt(-191) True\n",
+      "sqrt(-304) True\n",
+      "sqrt(-252000) True\n"
      ]
     }
    ],
@@ -497,11 +497,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sqrt(-4)\n",
-      "sqrt(-7)\n",
       "sqrt(-3)\n",
+      "sqrt(-7)\n",
       "sqrt(-6)\n",
-      "sqrt(-9)\n"
+      "sqrt(-9)\n",
+      "sqrt(-4)\n"
      ]
     }
    ],
@@ -634,6 +634,54 @@
     "for candidate in candidates:\n",
     "    print(candidate.constraint)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ec3406ab-0917-4f37-99f2-5a9051e311d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candidate = candidates[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7b2c77c4-baa1-4eee-91e7-e04a50b7d390",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sqrt(-100001)\n",
+      "sqrt(-22)\n",
+      "sqrt(-6)\n",
+      "sqrt(-109010)\n",
+      "sqrt(-873580)\n",
+      "sqrt(-9)\n",
+      "sqrt(-785)\n",
+      "sqrt(-80)\n",
+      "sqrt(-64)\n",
+      "sqrt(-7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "fandango = Fandango(grammar, [candidate.constraint])\n",
+    "solutions = fandango.evolve()\n",
+    "for tree in solutions[:10]:\n",
+    "    print(tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fd7ce14-ceb6-4cfa-bd2f-5e00f9f52c6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
