--- a/doc/02_refinement.ipynb
+++ b/doc/02_refinement.ipynb
@@ -264,21 +264,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sqrt(-900) True\n",
-      "sqrt(-10) True\n",
-      "cos(10) False\n",
-      "sqrt(0) False\n",
-      "sqrt(-1990) True\n",
-      "sin(-900) False\n",
-      "sqrt(-70) True\n",
-      "sqrt(-85792) True\n",
-      "sqrt(-33) True\n",
       "sqrt(-203400) True\n",
-      "sqrt(-31000) True\n",
-      "sqrt(2) False\n",
-      "sqrt(-191) True\n",
+      "sqrt(0) False\n",
       "sqrt(-304) True\n",
-      "sqrt(-252000) True\n"
+      "sqrt(-10) True\n",
+      "sqrt(-33) True\n",
+      "sin(-900) False\n",
+      "sqrt(-900) True\n",
+      "sqrt(-191) True\n",
+      "sqrt(-70) True\n",
+      "cos(10) False\n",
+      "sqrt(-31000) True\n",
+      "sqrt(-252000) True\n",
+      "sqrt(2) False\n",
+      "sqrt(-1990) True\n",
+      "sqrt(-85792) True\n"
      ]
     }
    ],
@@ -312,7 +312,7 @@
      "text": [
       "fandango-learner:INFO: Instantiated patterns: 18\n",
       "fandango-learner:INFO: Filtered positive inputs for learning: 5\n",
-      "fandango-learner:INFO: Found 25 valid conjunctions\n"
+      "fandango-learner:INFO: Found 16 valid conjunctions\n"
      ]
     },
     {
@@ -436,7 +436,11 @@
    "outputs": [],
    "source": [
     "from fandango.constraints.base import ConjunctionConstraint\n",
-    "negated_constraint = NegationConstraint(learned_constraints[0].constraint.constraints[0])\n",
+    "from fandangoLearner.interface.fandango import parse_constraint\n",
+    "\n",
+    "new_const = parse_constraint(\"int(<number>) >= -10;\")\n",
+    "#negated_constraint = NegationConstraint(learned_constraints[0].constraint.constraints[0])\n",
+    "negated_constraint = NegationConstraint(new_const)\n",
     "test_constraint = ConjunctionConstraint([negated_constraint, learned_constraints[0].constraint.constraints[1]])"
    ]
   },
@@ -454,7 +458,7 @@
     {
      "data": {
       "text/plain": [
-       "(~(int(<number>) <= -10) and str(<function>) == 'sqrt')"
+       "(~(int(<number>) >= -10) and str(<function>) == 'sqrt')"
       ]
      },
      "execution_count": 11,
@@ -478,7 +482,7 @@
    },
    "outputs": [],
    "source": [
-    "fandango = Fandango(grammar, [test_constraint], desired_solutions=100)\n",
+    "fandango = Fandango(grammar, [new_const], desired_solutions=100)\n",
     "solutions = fandango.evolve()"
    ]
   },
@@ -497,11 +501,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sqrt(-3)\n",
-      "sqrt(-7)\n",
       "sqrt(-6)\n",
-      "sqrt(-9)\n",
-      "sqrt(-4)\n"
+      "sqrt(-9)\n"
      ]
     }
    ],
@@ -530,14 +531,14 @@
      "text": [
       "fandango-learner:INFO: Instantiated patterns: 18\n",
       "fandango-learner:INFO: Filtered positive inputs for learning: 5\n",
-      "fandango-learner:INFO: Found 25 valid conjunctions\n"
+      "fandango-learner:INFO: Found 15 valid conjunctions\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(int(<number>) <= -3 and str(<function>) == 'sqrt')\n"
+      "(int(<number>) <= -6 and str(<function>) == 'sqrt')\n"
      ]
     }
    ],
@@ -586,7 +587,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random.seed(3)\n",
     "from fandangoLearner.refinement.core import FandangoRefinement,LoggerLevel"
    ]
   },
@@ -655,16 +655,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sqrt(-100001)\n",
-      "sqrt(-22)\n",
-      "sqrt(-6)\n",
-      "sqrt(-109010)\n",
-      "sqrt(-873580)\n",
-      "sqrt(-9)\n",
-      "sqrt(-785)\n",
-      "sqrt(-80)\n",
-      "sqrt(-64)\n",
-      "sqrt(-7)\n"
+      "sqrt(-27300)\n",
+      "sqrt(-248890)\n",
+      "sqrt(-480630)\n",
+      "sqrt(-203)\n",
+      "sqrt(-871800)\n",
+      "sqrt(-3050)\n",
+      "sqrt(-200)\n",
+      "sqrt(-648)\n",
+      "sqrt(-898)\n",
+      "sqrt(-6)\n"
      ]
     }
    ],
@@ -679,6 +679,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8fd7ce14-ceb6-4cfa-bd2f-5e00f9f52c6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8964685b-f8cb-4fd7-a8a1-d5c9e129b5b1",
    "metadata": {},
    "outputs": [],
    "source": []
